fix : css modif eval

--- a/templates/eval/evaluation.html.twig
+++ b/templates/eval/evaluation.html.twig
@@ -201,7 +201,7 @@
                     <input type="text" class="rempli-c nombre" placeholder="Entrer un nombre ...">
                 </div>
                 <h3>Choissir les questions</h3>
-                <button class="rempli-c">Tout sélectionner</button>
+                {# <button class="rempli-c">Tout sélectionner</button> #}
                 <div class="tab-question">
                     <div class="entete">
                         <details>
@@ -286,7 +286,7 @@
                 </div> 
                 <div class="ret-suiv">
                     <button class="vide-c">Retour</button>
-                    <a href="{{ path('app_eval_pdf', {'id': evaluation.id}) }}" target="_blank" class="btn btn-secondary">
+                    <a class="vide-c" href="{{ path('app_eval_pdf', {'id': evaluation.id}) }}" target="_blank" class="btn btn-secondary">
                         <i class="fas fa-file-pdf"></i> Générer PDF
                     </a>
                     <button class="vide-c" type="submit">Valider</button>
